<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompetencesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:background="#33A5FF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="67dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:src="@drawable/chad"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textStyle="bold"
                android:text="@string/Myname" />

            <TextView
                android:id="@+id/textViewphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/textViewadress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/adress" />

            <TextView
                android:id="@+id/textViewmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/mail" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#fa0101"
        android:text="@string/title_language" />

    <ListView
        android:id="@+id/listViewLanguages"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="1dp"
        tools:listitem="@layout/item_languages"/>


    <TextView
        android:id="@+id/textViewProject"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="#fa0101"
        android:text="@string/title_project" />

    <ListView
        android:id="@+id/listViewProject"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        tools:listitem="@layout/item_projet" />

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#33A5FF"
        android:text="@string/title_return" />

</LinearLayout>